deployments/08-identity-aware-proxy/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.1
        args:
          - --provider=oidc
          - --client-id=$(OAUTH2_PROXY_CLIENT_ID)
          - --client-secret=$(OAUTH2_PROXY_CLIENT_SECRET)
          # The URL where your SSO-Django IdP is hosted (it must have the /.well-known/openid-configuration endpoint)
          - --oidc-issuer-url=https://sso-django.myapp.com/o 
          # The callback URL matching your Ingress
          - --redirect-url=https://myapp.com/oauth2/callback
          - --email-domain=*
          - --http-address=0.0.0.0:4180
          - --set-xauthrequest=true
          - --pass-access-token=true
          - --pass-authorization-header=true
        ports:
        - containerPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
  - port: 4180
    targetPort: 4180
  selector:
    app: oauth2-proxy
